# mocamusic-desktop

./: .env.example  .gitignore  README.md  RELEASE_NOTES.md  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: build-test.yml  main.yml
scripts/: bump-version.js  generate-changelog.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  observability.rs
src/app/: dashboard.tsx  globals.css  index.tsx  layout.tsx  page.tsx
src/app/configs/: page.tsx
src/app/domain/model/: DownloadAudioRequest.ts  DownloadAudioResponse.ts  VideoInfoRequest.ts  VideoInfoResponse.ts
src/app/gateway/: InvokeGateway.ts  TauriInvokeGateway.ts
src/app/usecase/: DownloadAudio.ts  GetVideoInfo.ts
src/components/internal/: clipboard-inspect.tsx  display-version.tsx  error-boundary.tsx  observability-provider.tsx
src/lib/: sanitize.ts  schema.ts
src/test/: DownloadAudio.test.ts  ErrorBoundary.test.tsx  GetVideoInfo.test.ts  ObservabilityProvider.test.tsx  Page.test.tsx  init.test.ts  sanitize.test.ts  schema.test.ts
test/: GetVideoInfo.test.ts
